<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/control_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/text_about_us_title"
                style="@style/about_us_text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="1dp"
                android:lineSpacingMultiplier="1.2"
                android:paddingBottom="10dp"
                android:text="@string/about_us1" />

            <TextView
                android:id="@+id/version"
                style="@style/green_text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_number" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/our_portfolio"
            android:textColor="@color/primary_dark"
            android:textSize="19sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <com.ivmall.android.app.views.DownProgressView
                android:id="@+id/image_icon_tongle"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/app_icon" />

            <TextView
                style="@style/green_text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_icon_tongle"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/image_icon_tongle"
                android:text="@string/tongle_title" />

            <TextView
                style="@style/white_small_normal_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_icon_tongle"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/image_icon_tongle"
                android:text="@string/tongle_content" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <com.ivmall.android.app.views.DownProgressView
                android:id="@+id/image_icon_dora"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/icon_dora" />

            <TextView
                android:id="@+id/text_dora_title"
                style="@style/green_text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_icon_dora"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/image_icon_dora"
                android:text="@string/dora_title" />

            <TextView
                android:id="@+id/text_dora_detail"
                style="@style/white_small_normal_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_dora_title"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/image_icon_dora"
                android:text="@string/dora_detail" />

            <Button
                android:id="@+id/btn_downNj"
                style="@style/about_us_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_dora_detail"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_green_shape"
                android:text="@string/btn_download" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <com.ivmall.android.app.views.DownProgressView
                android:id="@+id/image_icon_en"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/icon_english" />

            <TextView
                android:id="@+id/text_fnf_title"
                style="@style/green_text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_icon_en"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/image_icon_en"
                android:text="@string/fnf_title" />

            <TextView
                android:id="@+id/text_fnf_detail"
                style="@style/white_small_normal_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_fnf_title"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/image_icon_en"
                android:text="@string/fnf_detail" />

            <Button
                android:id="@+id/btn_downFnf"
                style="@style/about_us_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_fnf_detail"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_green_shape"
                android:text="@string/btn_download" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                style="@style/green_text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text_qq"
                android:text="@string/server_phone" />

            <TextView
                android:id="@+id/text_qq"
                style="@style/green_text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/text_website"
                android:text="@string/server_qq_group" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_website"
            style="@style/green_text_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/website" />

    </LinearLayout>
</ScrollView>