<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_do_you_like"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:text="@string/do_you_like_this_video" />

        <Button
            android:id="@+id/btn_like"
            android:layout_width="225dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_like" />

        <Button
            android:id="@+id/btn_unlike"
            android:layout_width="225dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_unlike" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingTop="10dp">


        <TextView
            android:id="@+id/time_over"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/bac_countdown"
            android:gravity="center"
            android:text="@string/c_number"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countdown"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>